// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider should render 1`] = `
<DocumentFragment>
  <div
    class="sc-AxjAm dXBaPf"
    type="horizontal"
  />
</DocumentFragment>
`;

exports[`Divider should render a dashed 1`] = `
<div>
  <div
    class="sc-AxjAm fsCpBF"
    type="horizontal"
  />
</div>
`;

exports[`Divider should render horizontal type 1`] = `
<div>
  <div
    class="sc-AxjAm dXBaPf"
    type="horizontal"
  />
</div>
`;

exports[`Divider should render vertical type 1`] = `
<div>
  <div
    class="sc-AxjAm kZwDiP"
    type="vertical"
  />
</div>
`;

exports[`Divider should render vertical type and large 1`] = `
<div>
  <div
    class="sc-AxjAm huzFUs"
    type="vertical"
  />
</div>
`;

exports[`Divider should render vertical type and small 1`] = `
<div>
  <div
    class="sc-AxjAm cIBGPV"
    type="vertical"
  />
</div>
`;
